kubernetes/dev/app/lubelogger/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lubelogger
  name: lubelogger
  namespace: lubelogger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lubelogger
  template:
    metadata:
      labels:
        app: lubelogger
    spec:
      containers:
        - image: ghcr.io/hargata/lubelogger:latest
          name: lubelogger
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /App/data
            - name: keys
              mountPath: /root/.aspnet/DataProtection-Keys
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lubelogger-data
        - name: keys
          persistentVolumeClaim:
            claimName: lubelogger-keys
