kubernetes/dev/app/lubelogger/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lubelogger
  name: lubelogger
  namespace: lubelogger
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: lubelogger
  type: ClusterIP
