kubernetes/dev/app/lubelogger/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lubelogger
  namespace: lubelogger
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - ${LUBELOGGER_HOST}
    secretName: lubelogger-tls
  rules:
  - host: ${LUBELOGGER_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lubelogger
            port:
              number: 8080
